Refactors entities and adds stock alerts
Refactors data types in entities to use BigDecimal for precision.

Adds the "isActive" field to several entities, providing a soft delete mechanism and improves data consistency.

Adds percentage calculation utility.

Removes unnecessary files from .gitignore and fixes configuration.